2003-08-09  Thierry Laronde  <tlaronde@polynum.org>

	* util/mkbimage: NEW File. `mkbimage' depends on GRUB and existed
	elsewhere. It is now part of GRUB so that people can fix/contribute.
	* util/Makefile.am: added script `mkbimage'

2003-08-01  Jason Thomas  <jason@intology.com.au>

	* util/grub-install.in: support --no-floppy
	This allow users to specify the --no-floppy option which
	is passed onto the grub shell, so it does not probe the floppy
	drive. 
	Patch from kesha@diedas.soften.ktu.lt

2003-06-17  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount): Clear the node cache.
	This fixes a problem where files from other partitions appear at
	the wrong partition.  Problem reported by Johan Regin.

2003-05-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (partnew): Fixed the inconsistency between the
	implementation and the documentation. The last argument is the
	length instead of the ending address.
	Reported by Daniel Farrell <s2108287@student.rmit.edu.au>.

2003-03-19  Yoshinori K. Okuji  <okuji@enbug.org>

	From Adam Lackorzynski <adam@os.inf.tu-dresden.de>:
	* stage2/shared.h (KEY_NPAGE): Changed to 0x5100.
	(KEY_PPAGE): Changed to 0x4900.

2003-03-19  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (load_image): Check if DATA_LEN plus SECTOR_SIZE
	is less than or equal to MULTIBOOT_SEARCH, instead of if
	DATA_LEN is less than or equal to MULTIBOOT_SEARCH.
	Reported by Neelkanth Natu <neelnatu@yahoo.com>.

2003-03-10  Yoshinori K. Okuji  <okuji@enbug.org>

	From Andrew Walrond <andrew@walrond.org>:
	* stage2/fsys_reiserfs.c (struct reiserfs_journal_header):
	Remove an unnecessary ``long''.

2003-03-10  Yoshinori K. Okuji  <okuji@enbug.org>

	From Tilmann Bubeck:
	* stage2/builtins.c [SUPPORT_SERIAL] (terminfo_func): Unescape
	arguments before copying them, and escape sequences before
	printing them.
	* stage2/terminfo.h (TERMINFO_LEN): Changed to 40.

2003-02-20  Yoshinori K. Okuji  <okuji@enbug.org>
